--- a/package.json
+++ b/package.json
@@ -2,21 +2,27 @@
   "name": "sch",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:5000",
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.15.0",
+    "@tailwindcss/forms": "0.4.0",
+    "@tanstack/react-table": "^8.5.30",
     "@testing-library/jest-dom": "^5.15.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^1.5.0",
+    "prop-types": "^15.8.1",
     "react": "17.0.2",
     "react-datepicker": "^4.5.0",
     "react-dom": "17.0.2",
+    "react-dotenv": "^0.1.3",
+    "react-pro-sidebar": "^1.0.0",
     "react-router-dom": "6.0.2",
     "react-router-hash-link": "^2.4.3",
-    "react-pro-sidebar": "^1.0.0",
-    "prop-types": "^15.8.1",
-    "@tanstack/react-table": "^8.5.30",
     "react-scripts": "5.0.0",
-    "web-vitals": "^2.1.0",
-    "@tailwindcss/forms": "0.4.0"
+    "web-vitals": "^2.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
